test/Fail/PatternSynonymOverapplied.err
PatternSynonymOverapplied.agda:10.7-15: error: [BadArgumentsToPatternSynonym]
Bad arguments to pattern synonym suc'
when checking that the expression suc' n n has type Nat
